PDFBOX-3766: replace method deprecated in jdk9
git-svn-id: https://svn.apache.org/repos/asf/pdfbox/branches/1.8@1792764 13f79535-47bb-0310-9956-ffa450edef68